RESOLVED FIXED304904
Fix some unretained lambda capture failures
https://bugs.webkit.org/show_bug.cgi?id=304904
Summary Fix some unretained lambda capture failures
Anne van Kesteren
Reported 2026-01-04 06:45:04 PST
.
Attachments
Anne van Kesteren
Comment 1 2026-01-04 06:46:02 PST
EWS
Comment 2 2026-01-05 21:25:43 PST
Committed 305141@main (f3f0d38a324a): <https://commits.webkit.org/305141@main> Reviewed commits have been landed. Closing PR #56057 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-05 21:26:13 PST
Note You need to log in before you can comment on or make changes to this bug.