Fix some unretained lambda capture failures https://bugs.webkit.org/show_bug.cgi?id=304904

Reviewed by Chris Dumez.

Apply https://github.com/WebKit/WebKit/wiki/Safer-CPP-Guidelines and
address various style nits.

Canonical link: https://commits.webkit.org/305141@main