Source/WebCore/platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm
@@ -72,7 +72,7 @@ static bool scheduledWithCustomRunLoopMode(const std::optional<SchedulePairHashS
         return callOnMainThread(WTF::move(function));
 
     // If we have been scheduled in a custom run loop mode, schedule a block in that mode.
-    auto block = makeBlockPtr([alreadyCalled = false, function = WTF::move(function)] () mutable {
+    auto block = makeBlockPtr([alreadyCalled = false, function = WTF::move(function)] mutable {
         if (alreadyCalled)
             return;
         alreadyCalled = true;
@@ -136,32 +136,32 @@ static bool scheduledWithCustomRunLoopMode(const std::optional<SchedulePairHashS
 #endif
 
     auto protectedSelf = retainPtr(self);
-    auto work = [self, protectedSelf, newRequest = retainPtr(newRequest), redirectResponse = retainPtr(redirectResponse)] () mutable {
-        if (!m_handle) {
-            m_requestResult = nullptr;
-            m_semaphore.signal();
+    auto work = [protectedSelf, newRequest = retainPtr(newRequest), redirectResponse = retainPtr(redirectResponse)] mutable {
+        if (!protectedSelf->m_handle) {
+            protectedSelf->m_requestResult = nullptr;
+            protectedSelf->m_semaphore.signal();
             return;
         }
 
         ResourceResponse response(redirectResponse.get());
         ResourceRequest redirectRequest = newRequest.get();
         if ([newRequest HTTPBodyStream]) {
-            ASSERT(m_handle->firstRequest().httpBody());
-            redirectRequest.setHTTPBody(m_handle->firstRequest().httpBody());
+            ASSERT(protectedSelf->m_handle->firstRequest().httpBody());
+            redirectRequest.setHTTPBody(protectedSelf->m_handle->firstRequest().httpBody());
         }
-        if (m_handle->firstRequest().httpContentType().isEmpty())
+        if (protectedSelf->m_handle->firstRequest().httpContentType().isEmpty())
             redirectRequest.clearHTTPContentType();
 
         // Check if the redirected url is allowed to access the redirecting url's timing information.
-        if (!m_handle->hasCrossOriginRedirect() && !WebCore::SecurityOrigin::create(redirectRequest.url())->canRequest(redirectResponse.get().URL, OriginAccessPatternsForWebProcess::singleton()))
-            m_handle->markAsHavingCrossOriginRedirect();
-        m_handle->checkTAO(response);
+        if (!protectedSelf->m_handle->hasCrossOriginRedirect() && !WebCore::SecurityOrigin::create(redirectRequest.url())->canRequest(redirectResponse.get().URL, OriginAccessPatternsForWebProcess::singleton()))
+            protectedSelf->m_handle->markAsHavingCrossOriginRedirect();
+        protectedSelf->m_handle->checkTAO(response);
 
-        m_handle->incrementRedirectCount();
+        protectedSelf->m_handle->incrementRedirectCount();
 
-        m_handle->willSendRequest(WTF::move(redirectRequest), WTF::move(response), [self, protectedSelf = WTF::move(protectedSelf)](ResourceRequest&& request) {
-            m_requestResult = request.nsURLRequest(HTTPBodyUpdatePolicy::UpdateHTTPBody);
-            m_semaphore.signal();
+        protectedSelf->m_handle->willSendRequest(WTF::move(redirectRequest), WTF::move(response), [protectedSelf = WTF::move(protectedSelf)](ResourceRequest&& request) {
+            protectedSelf->m_requestResult = request.nsURLRequest(HTTPBodyUpdatePolicy::UpdateHTTPBody);
+            protectedSelf->m_semaphore.signal();
         });
     };
 
@@ -190,12 +190,12 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
     LOG(Network, "Handle %p delegate connection:%p didReceiveAuthenticationChallenge:%p", m_handle.get(), connection, challenge);
 
-    auto work = [self, protectedSelf = retainPtr(self), challenge = retainPtr(challenge)] () mutable {
-        if (!m_handle) {
+    auto work = [protectedSelf = retainPtr(self), challenge = retainPtr(challenge)] mutable {
+        if (!protectedSelf->m_handle) {
             [[challenge sender] cancelAuthenticationChallenge:challenge.get()];
             return;
         }
-        m_handle->didReceiveAuthenticationChallenge(core(challenge.get()));
+        protectedSelf->m_handle->didReceiveAuthenticationChallenge(core(challenge.get()));
     };
 
     [self callFunctionOnMainThread:WTF::move(work)];
@@ -211,15 +211,15 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     LOG(Network, "Handle %p delegate connection:%p canAuthenticateAgainstProtectionSpace:%@://%@:%zd realm:%@ method:%@ %@%@", m_handle.get(), connection, [protectionSpace protocol], [protectionSpace host], [protectionSpace port], [protectionSpace realm], [protectionSpace authenticationMethod], [protectionSpace isProxy] ? @"proxy:" : @"", [protectionSpace isProxy] ? [protectionSpace proxyType] : @"");
 
     auto protectedSelf = retainPtr(self);
-    auto work = [self, protectedSelf, protectionSpace = retainPtr(protectionSpace)] () mutable {
-        if (!m_handle) {
-            m_boolResult = NO;
-            m_semaphore.signal();
+    auto work = [protectedSelf, protectionSpace = retainPtr(protectionSpace)] mutable {
+        if (!protectedSelf->m_handle) {
+            protectedSelf->m_boolResult = NO;
+            protectedSelf->m_semaphore.signal();
             return;
         }
-        m_handle->canAuthenticateAgainstProtectionSpace(ProtectionSpace(protectionSpace.get()), [self, protectedSelf = WTF::move(protectedSelf)] (bool result) mutable {
-            m_boolResult = result;
-            m_semaphore.signal();
+        protectedSelf->m_handle->canAuthenticateAgainstProtectionSpace(ProtectionSpace(protectionSpace.get()), [protectedSelf = WTF::move(protectedSelf)](bool result) mutable {
+            protectedSelf->m_boolResult = result;
+            protectedSelf->m_semaphore.signal();
         });
     };
 
@@ -246,10 +246,10 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     LOG(Network, "Handle %p delegate connection:%p didReceiveResponse:%p (HTTP status %zd, reported MIMEType '%s')", m_handle.get(), connection, r, [r respondsToSelector:@selector(statusCode)] ? [(id)r statusCode] : 0, [[r MIMEType] UTF8String]);
 
     auto protectedSelf = retainPtr(self);
-    auto work = [self, protectedSelf, r = retainPtr(r), connection = retainPtr(connection)] mutable {
-        RefPtr handle = m_handle.get();
+    auto work = [protectedSelf, r = retainPtr(r), connection = retainPtr(connection)] mutable {
+        RefPtr handle = protectedSelf->m_handle.get();
         if (!handle || !handle->client()) {
-            m_semaphore.signal();
+            protectedSelf->m_semaphore.signal();
             return;
         }
 
@@ -272,8 +272,8 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
         handle->setNetworkLoadMetrics(WTF::move(metrics));
 
-        handle->didReceiveResponse(WTF::move(resourceResponse), [self, protectedSelf = WTF::move(protectedSelf)] {
-            m_semaphore.signal();
+        handle->didReceiveResponse(WTF::move(resourceResponse), [protectedSelf = WTF::move(protectedSelf)] {
+            protectedSelf->m_semaphore.signal();
         });
     };
 
@@ -292,8 +292,8 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
     LOG(Network, "Handle %p delegate connection:%p didReceiveData:%p lengthReceived:%lld", m_handle.get(), connection, data, lengthReceived);
 
-    auto work = [self = self, protectedSelf = retainPtr(self), data = retainPtr(data)] () mutable {
-        if (!m_handle || !m_handle->client())
+    auto work = [protectedSelf = retainPtr(self), data = retainPtr(data)] mutable {
+        if (!protectedSelf->m_handle || !protectedSelf->m_handle->client())
             return;
         // FIXME: If we get more than 2B bytes in a single chunk, this code won't do the right thing.
         // However, with today's computers and networking speeds, this won't happen in practice.
@@ -302,7 +302,7 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
         // FIXME: https://bugs.webkit.org/show_bug.cgi?id=19793
         // -1 means we do not provide any data about transfer size to inspector so it would use
         // Content-Length headers or content size to show transfer size.
-        m_handle->client()->didReceiveData(m_handle.get(), SharedBuffer::create(data.get()), -1);
+        protectedSelf->m_handle->client()->didReceiveData(protectedSelf->m_handle.get(), SharedBuffer::create(data.get()), -1);
     };
 
     [self callFunctionOnMainThread:WTF::move(work)];
@@ -316,10 +316,10 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
     LOG(Network, "Handle %p delegate connection:%p didSendBodyData:%zd totalBytesWritten:%zd totalBytesExpectedToWrite:%zd", m_handle.get(), connection, bytesWritten, totalBytesWritten, totalBytesExpectedToWrite);
 
-    auto work = [self = self, protectedSelf = retainPtr(self), totalBytesWritten = totalBytesWritten, totalBytesExpectedToWrite = totalBytesExpectedToWrite] () mutable {
-        if (!m_handle || !m_handle->client())
+    auto work = [protectedSelf = retainPtr(self), totalBytesWritten = totalBytesWritten, totalBytesExpectedToWrite = totalBytesExpectedToWrite] mutable {
+        if (!protectedSelf->m_handle || !protectedSelf->m_handle->client())
             return;
-        m_handle->client()->didSendData(m_handle.get(), totalBytesWritten, totalBytesExpectedToWrite);
+        protectedSelf->m_handle->client()->didSendData(protectedSelf->m_handle.get(), totalBytesWritten, totalBytesExpectedToWrite);
     };
 
     [self callFunctionOnMainThread:WTF::move(work)];
@@ -332,11 +332,11 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
     LOG(Network, "Handle %p delegate connectionDidFinishLoading:%p", m_handle.get(), connection);
 
-    auto work = [self = self, protectedSelf = retainPtr(self), connection = retainPtr(connection), timingData = retainPtr([connection _timingData])] () mutable {
-        if (!m_handle || !m_handle->client())
+    auto work = [protectedSelf = retainPtr(self), connection = retainPtr(connection), timingData = retainPtr([connection _timingData])] mutable {
+        if (!protectedSelf->m_handle || !protectedSelf->m_handle->client())
             return;
 
-        if (auto metrics = m_handle->networkLoadMetrics()) {
+        if (auto metrics = protectedSelf->m_handle->networkLoadMetrics()) {
             if (double responseEndTime = [[timingData objectForKey:@"_kCFNTimingDataResponseEnd"] doubleValue])
                 metrics->responseEnd = WallTime::fromRawSeconds(adoptNS([[NSDate alloc] initWithTimeIntervalSinceReferenceDate:responseEndTime]).get().timeIntervalSince1970).approximateMonotonicTime();
             else
@@ -345,16 +345,16 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
             metrics->responseBodyBytesReceived = [[timingData objectForKey:@"_kCFNTimingDataResponseBodyBytesReceived"] unsignedLongLongValue];
             metrics->responseBodyDecodedSize = [[timingData objectForKey:@"_kCFNTimingDataResponseBodyBytesDecoded"] unsignedLongLongValue];
             metrics->markComplete();
-            m_handle->client()->didFinishLoading(m_handle.get(), *metrics);
+            protectedSelf->m_handle->client()->didFinishLoading(protectedSelf->m_handle.get(), *metrics);
         } else {
             NetworkLoadMetrics emptyMetrics;
             emptyMetrics.markComplete();
-            m_handle->client()->didFinishLoading(m_handle.get(), emptyMetrics);
+            protectedSelf->m_handle->client()->didFinishLoading(protectedSelf->m_handle.get(), emptyMetrics);
         }
 
-        if (m_messageQueue) {
-            m_messageQueue->kill();
-            m_messageQueue = nullptr;
+        if (protectedSelf->m_messageQueue) {
+            protectedSelf->m_messageQueue->kill();
+            protectedSelf->m_messageQueue = nullptr;
         }
     };
 
@@ -368,14 +368,14 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 
     LOG(Network, "Handle %p delegate connection:%p didFailWithError:%@", m_handle.get(), connection, error);
 
-    auto work = [self = self, protectedSelf = retainPtr(self), error = retainPtr(error)] () mutable {
-        if (!m_handle || !m_handle->client())
+    auto work = [protectedSelf = retainPtr(self), error = retainPtr(error)] mutable {
+        if (!protectedSelf->m_handle || !protectedSelf->m_handle->client())
             return;
 
-        m_handle->client()->didFail(m_handle.get(), error.get());
-        if (m_messageQueue) {
-            m_messageQueue->kill();
-            m_messageQueue = nullptr;
+        protectedSelf->m_handle->client()->didFail(protectedSelf->m_handle.get(), error.get());
+        if (protectedSelf->m_messageQueue) {
+            protectedSelf->m_messageQueue->kill();
+            protectedSelf->m_messageQueue = nullptr;
         }
     };
 
@@ -391,16 +391,16 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     LOG(Network, "Handle %p delegate connection:%p willCacheResponse:%p", m_handle.get(), connection, cachedResponse);
 
     auto protectedSelf = retainPtr(self);
-    auto work = [self, protectedSelf, cachedResponse = retainPtr(cachedResponse)] () mutable {
-        if (!m_handle || !m_handle->client()) {
-            m_cachedResponseResult = nullptr;
-            m_semaphore.signal();
+    auto work = [protectedSelf, cachedResponse = retainPtr(cachedResponse)] mutable {
+        if (!protectedSelf->m_handle || !protectedSelf->m_handle->client()) {
+            protectedSelf->m_cachedResponseResult = nullptr;
+            protectedSelf->m_semaphore.signal();
             return;
         }
 
-        m_handle->client()->willCacheResponseAsync(m_handle.get(), cachedResponse.get(), [self, protectedSelf = WTF::move(protectedSelf)] (NSCachedURLResponse * response) mutable {
-            m_cachedResponseResult = response;
-            m_semaphore.signal();
+        protectedSelf->m_handle->client()->willCacheResponseAsync(protectedSelf->m_handle.get(), cachedResponse.get(), [protectedSelf = WTF::move(protectedSelf)](NSCachedURLResponse * response) mutable {
+            protectedSelf->m_cachedResponseResult = response;
+            protectedSelf->m_semaphore.signal();
         });
     };
 
